# ctcache

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  clang-tidy-cache
cmake/: Cache.cmake  InterproceduralOptimization.cmake  SafeGuards.cmake  StaticAnalyzers.cmake  Warnings.cmake
include/: ClangTidyWarnings.h  pch.h
src/: ClangTidyWarnings.cpp  Main.cpp
tools/: clang-tidy-cache-wrapper.bat
